cpp_damiao/include/motor_abi.h

typedef struct MotorController MotorController;
typedef struct MotorControllerGroup MotorControllerGroup;
typedef struct MotorHandle MotorHandle;
typedef struct MotorFeedbackReport {
  // Caller must initialize this to sizeof(MotorFeedbackReport).
  uint32_t struct_size;
  uint32_t timeout_ms;
  uint32_t expected_count;
  uint32_t received_count;
  uint32_t missing_count;
} MotorFeedbackReport;
typedef struct MotorDiscoveryCandidate {
  const char* role;
  uint16_t motor_id;
  uint16_t feedback_id;
  const char* model;
  int32_t policy;
} MotorDiscoveryCandidate;
typedef struct MotorDiscoveryResult {
  char role[64];
  uint16_t motor_id;
  uint16_t feedback_id;
  int32_t policy;
  int32_t state;
  MotorHandle* motor;
  char reason[256];
} MotorDiscoveryResult;
typedef struct MotorMitBatchCommand {
  MotorHandle* motor;
  float target_position;
  float target_velocity;
  float stiffness;
  float damping;
  float feedforward_torque;
} MotorMitBatchCommand;
typedef struct MotorPosVelBatchCommand {
  MotorHandle* motor;
  float target_position;
  float velocity_limit;
} MotorPosVelBatchCommand;
typedef struct MotorState {
  int32_t has_value;
  uint8_t can_id;
  uint32_t arbitration_id;
  uint8_t status_code;
  float pos;
  float vel;
  float torq;
  float t_mos;
  float t_rotor;
} MotorState;
typedef struct MotorFeedbackStats {
  int32_t has_feedback;
  uint64_t update_count;
  uint64_t age_ns;
} MotorFeedbackStats;
typedef struct MotorTransportCapabilities {
  char transport[32];
  uint32_t max_payload_bytes;
  uint32_t channel_count;
  int32_t can_fd;
  int32_t parallel_batches;
  int32_t hardware_rx_timestamps;
  int32_t reconnect;
  int32_t process_session_reuse;
} MotorTransportCapabilities;
typedef struct MotorTransportHealth {
  int32_t connected;
  int32_t healthy;
  uint64_t tx_frames;
  uint64_t rx_frames;
  uint64_t send_errors;
  uint64_t receive_errors;
  uint64_t last_tx_age_ns;
  uint64_t last_rx_age_ns;
  char last_error[256];
} MotorTransportHealth;
typedef struct MotorRegisterInfo {
  int32_t has_value;
  uint8_t rid;
  uint8_t access;
  uint8_t data_type;
} MotorRegisterInfo;
// Unified units across all vendors:
// - position: rad
// - velocity: rad/s
// - torque: Nm
//
// Unified mode IDs for motor_handle_ensure_mode:
// - 1: MIT
// - 2: POS_VEL
// - 3: VEL
// - 4: FORCE_POS
//
// Vendor support in current ABI:
// - Damiao

// Returns the last error message for the calling thread.
//
// Lifetime: the returned pointer is owned by the ABI and remains valid only
// until the next ABI call on the same thread changes the thread-local error
// slot. Copy the string immediately if it must be kept.
const char* motor_last_error_message(void);
const char* motor_abi_version(void);
const char* motor_abi_capabilities_json(void);
// Returns metadata from the C++ Damiao register table. Unknown register IDs
// succeed with out_info->has_value set to zero.
int32_t motor_damiao_register_info(uint8_t rid, MotorRegisterInfo* out_info);
// Thread-safety:
// - Calls using the same MotorController or MotorHandle are serialized inside
//   the ABI.
// - Free functions are exclusive ownership operations: do not call
//   motor_controller_free or motor_handle_free concurrently with any other
//   operation using the same pointer, and do not use a pointer after free.
// - Different handles may be used from different threads.
// - Controller-group calls are serialized per group. Do not concurrently use
//   individual send calls for motors participating in a group dispatch; frame
//   ordering between those independent calls is unspecified.
// - MotorHandle values are logical children of the MotorController that
//   created them. Do not perform motor operations after freeing the parent
//   controller. The handle itself may still be passed to motor_handle_free.

MotorController* motor_controller_new_socketcan(const char* channel);
// Opens SocketCAN-FD with CAN-FD bit-rate switching enabled by default.
MotorController* motor_controller_new_socketcanfd(const char* channel);
MotorController* motor_controller_new_dm_serial(const char* serial_port, uint32_t baud);
MotorController* motor_controller_new_dm_device(const char* dm_device_type, const char* dm_channel);
MotorController* motor_controller_new_dm_device_ex(const char* dm_device_type, const char* dm_channel,
                                                   uint32_t bitrate, uint32_t data_bitrate);
void motor_controller_free(MotorController* controller);
// Creates one persistent native worker for each controller. The controller and
// all motor handles used in commands must outlive the group. Group sends wake
// every worker for one shared dispatch generation, preserve command order
// within each controller, and wait for all controllers before returning. A
// failed dispatch still waits for every controller and reports controller,
// endpoint, motor ID, and native error details through motor_last_error_message.
MotorControllerGroup* motor_controller_group_new(MotorController* const* controllers,
                                                 uint32_t controller_count);
void motor_controller_group_free(MotorControllerGroup* group);
int32_t motor_controller_group_send_mit(MotorControllerGroup* group,
                                        const MotorMitBatchCommand* commands,
                                        uint32_t command_count);
int32_t motor_controller_group_send_pos_vel(MotorControllerGroup* group,
                                            const MotorPosVelBatchCommand* commands,
                                            uint32_t command_count);
int32_t motor_controller_poll_feedback_once(MotorController* controller);
// Legacy compatibility entry point: returns 0 on success and -1 on every
// failure. Use motor_controller_request_feedback_all_ex for stable error codes.
int32_t motor_controller_request_feedback_all(MotorController* controller, uint32_t timeout_ms);
// Returns MotorErrorCode. The report is filled for OK, timeout, incomplete,
// and transport outcomes. Up to missing_motor_ids_capacity missing IDs are
// written; report->missing_count always reports the full required count, so a
// null buffer with zero capacity may be used to query the size.
int32_t motor_controller_request_feedback_all_ex(
    MotorController* controller,
    uint32_t timeout_ms,
    MotorFeedbackReport* report,
    uint32_t* missing_motor_ids,
    uint32_t missing_motor_ids_capacity);
int32_t motor_controller_enable_all(MotorController* controller);
int32_t motor_controller_disable_all(MotorController* controller);
int32_t motor_controller_shutdown(MotorController* controller);
int32_t motor_controller_close_bus(MotorController* controller);
int32_t motor_controller_set_tx_gap_us(MotorController* controller, uint32_t gap_us);
int32_t motor_controller_get_transport_capabilities(
    MotorController* controller, MotorTransportCapabilities* out_capabilities);
int32_t motor_controller_get_transport_health(
    MotorController* controller, MotorTransportHealth* out_health);
MotorHandle* motor_controller_add_damiao_motor(MotorController* controller, uint16_t motor_id, uint16_t feedback_id, const char* model);
// Discovers a complete candidate set without enabling or commanding motors.
// One result is returned for every candidate (including Disabled candidates).
// Present result handles are owned by the caller and must be released with
// motor_handle_free. On failure no result handles are returned.
int32_t motor_controller_discover_damiao_motors(
    MotorController* controller,
    const MotorDiscoveryCandidate* candidates,
    uint32_t candidate_count,
    uint32_t timeout_ms,
    uint32_t retry_count,
    MotorDiscoveryResult* results,
    uint32_t result_capacity);
void motor_handle_free(MotorHandle* handle);
int32_t motor_handle_enable(MotorHandle* handle);
int32_t motor_handle_disable(MotorHandle* handle);
int32_t motor_handle_clear_error(MotorHandle* handle);
int32_t motor_handle_set_zero_position(MotorHandle* handle);
int32_t motor_handle_ensure_mode(MotorHandle* handle, uint32_t mode, uint32_t timeout_ms);
int32_t motor_handle_send_mit(MotorHandle* handle, float target_position, float target_velocity, float stiffness, float damping, float feedforward_torque);
int32_t motor_handle_send_pos_vel(MotorHandle* handle, float target_position, float velocity_limit);
int32_t motor_handle_send_vel(MotorHandle* handle, float target_velocity);
int32_t motor_handle_send_force_pos(MotorHandle* handle, float target_position, float velocity_limit, float torque_limit_ratio);
int32_t motor_handle_store_parameters(MotorHandle* handle);
int32_t motor_handle_request_feedback(MotorHandle* handle);
int32_t motor_handle_request_fresh_state(MotorHandle* handle, uint32_t timeout_ms,
                                         MotorState* out_state);
int32_t motor_handle_set_can_timeout_ms(MotorHandle* handle, uint32_t timeout_ms);
int32_t motor_handle_write_register_f32(MotorHandle* handle, uint8_t rid, float value);
int32_t motor_handle_write_register_u32(MotorHandle* handle, uint8_t rid, uint32_t value);
int32_t motor_handle_get_register_f32(MotorHandle* handle, uint8_t rid, uint32_t timeout_ms, float* out_value);
int32_t motor_handle_get_register_u32(MotorHandle* handle, uint8_t rid, uint32_t timeout_ms, uint32_t* out_value);
int32_t motor_handle_get_state(MotorHandle* handle, MotorState* out_state);
int32_t motor_handle_get_feedback_stats(MotorHandle* handle, MotorFeedbackStats* out_stats);
int32_t motor_handle_damiao_get_param_f32(MotorHandle* handle, uint16_t param_id, uint32_t timeout_ms, float* out_value);
int32_t motor_handle_damiao_get_param_u32(MotorHandle* handle, uint16_t param_id, uint32_t timeout_ms, uint32_t* out_value);
int32_t motor_handle_damiao_write_param_f32(MotorHandle* handle, uint16_t param_id, float value);
int32_t motor_handle_damiao_write_param_u32(MotorHandle* handle, uint16_t param_id, uint32_t value);