bindings/python/src/motor_drive_layer/abi.py


        lib.motor_controller_new_socketcan.argtypes = [c_char_p]
        lib.motor_controller_new_socketcan.restype = c_void_p
        lib.motor_controller_new_socketcanfd.argtypes = [c_char_p]
        lib.motor_controller_new_socketcanfd.restype = c_void_p
        lib.motor_controller_new_dm_serial.argtypes = [c_char_p, c_uint32]
        lib.motor_controller_new_dm_serial.restype = c_void_p
        lib.motor_controller_new_dm_device.argtypes = [c_char_p, c_char_p]
        lib.motor_controller_new_dm_device.restype = c_void_p
        # Additive in motor-drive-layer 0.5.7.  Keep the Python package able to
        # load an older native library and fall back to its fixed 1M/5M entry.
        self.has_dm_device_ex = hasattr(lib, "motor_controller_new_dm_device_ex")
        if self.has_dm_device_ex:
            lib.motor_controller_new_dm_device_ex.argtypes = [
                c_char_p,
                c_char_p,
                c_uint32,
                c_uint32,
            ]
            lib.motor_controller_new_dm_device_ex.restype = c_void_p
        self.has_controller_group = all(
            hasattr(lib, name)
            for name in (
                "motor_controller_group_new",
                "motor_controller_group_free",
                "motor_controller_group_send_mit",
                "motor_controller_group_send_pos_vel",
            )
        )
        if self.has_controller_group:
            lib.motor_controller_group_new.argtypes = [POINTER(c_void_p), c_uint32]
            lib.motor_controller_group_new.restype = c_void_p
            lib.motor_controller_group_free.argtypes = [c_void_p]
            lib.motor_controller_group_send_mit.argtypes = [
                c_void_p,
                POINTER(CMitBatchCommand),
                c_uint32,
            ]
            lib.motor_controller_group_send_mit.restype = c_int32
            lib.motor_controller_group_send_pos_vel.argtypes = [
                c_void_p,
                POINTER(CPosVelBatchCommand),
                c_uint32,
            ]
            lib.motor_controller_group_send_pos_vel.restype = c_int32
        lib.motor_controller_free.argtypes = [c_void_p]
        lib.motor_controller_poll_feedback_once.argtypes = [c_void_p]
        lib.motor_controller_poll_feedback_once.restype = c_int32
        lib.motor_controller_request_feedback_all.argtypes = [c_void_p, c_uint32]
        lib.motor_controller_request_feedback_all.restype = c_int32
        self.has_structured_feedback_report = hasattr(
            lib, "motor_controller_request_feedback_all_ex"
        )
        if self.has_structured_feedback_report:
            lib.motor_controller_request_feedback_all_ex.argtypes = [
                c_void_p,
                c_uint32,
                POINTER(CFeedbackReport),
                POINTER(c_uint32),
                c_uint32,
            ]
            lib.motor_controller_request_feedback_all_ex.restype = c_int32
        lib.motor_controller_enable_all.argtypes = [c_void_p]
        lib.motor_controller_enable_all.restype = c_int32
        lib.motor_controller_disable_all.argtypes = [c_void_p]
        lib.motor_controller_disable_all.restype = c_int32
        lib.motor_controller_shutdown.argtypes = [c_void_p]
        lib.motor_controller_shutdown.restype = c_int32
        lib.motor_controller_close_bus.argtypes = [c_void_p]
        lib.motor_controller_close_bus.restype = c_int32
        lib.motor_controller_set_tx_gap_us.argtypes = [c_void_p, c_uint32]
        lib.motor_controller_set_tx_gap_us.restype = c_int32
        self.has_transport_capabilities = hasattr(
            lib, "motor_controller_get_transport_capabilities"
        )
        if self.has_transport_capabilities:
            lib.motor_controller_get_transport_capabilities.argtypes = [
                c_void_p,
                POINTER(CTransportCapabilities),
            ]
            lib.motor_controller_get_transport_capabilities.restype = c_int32
        self.has_transport_health = hasattr(lib, "motor_controller_get_transport_health")
        if self.has_transport_health:
            lib.motor_controller_get_transport_health.argtypes = [
                c_void_p,
                POINTER(CTransportHealth),
            ]
            lib.motor_controller_get_transport_health.restype = c_int32

        lib.motor_controller_add_damiao_motor.argtypes = [c_void_p, c_uint16, c_uint16, c_char_p]
        lib.motor_controller_add_damiao_motor.restype = c_void_p
        self.has_motor_presence_discovery = hasattr(
            lib, "motor_controller_discover_damiao_motors"
        )
        if self.has_motor_presence_discovery:
            lib.motor_controller_discover_damiao_motors.argtypes = [
                c_void_p,
                POINTER(CDiscoveryCandidate),
                c_uint32,
                c_uint32,
                c_uint32,
                POINTER(CDiscoveryResult),
                c_uint32,
            ]
            lib.motor_controller_discover_damiao_motors.restype = c_int32

        lib.motor_handle_free.argtypes = [c_void_p]
        lib.motor_handle_enable.argtypes = [c_void_p]
        lib.motor_handle_enable.restype = c_int32
        lib.motor_handle_disable.argtypes = [c_void_p]
        lib.motor_handle_disable.restype = c_int32
        lib.motor_handle_clear_error.argtypes = [c_void_p]
        lib.motor_handle_clear_error.restype = c_int32
        lib.motor_handle_set_zero_position.argtypes = [c_void_p]
        lib.motor_handle_set_zero_position.restype = c_int32
        lib.motor_handle_ensure_mode.argtypes = [c_void_p, c_uint32, c_uint32]
        lib.motor_handle_ensure_mode.restype = c_int32

        lib.motor_handle_send_mit.argtypes = [c_void_p, c_float, c_float, c_float, c_float, c_float]
        lib.motor_handle_send_mit.restype = c_int32
        lib.motor_handle_send_pos_vel.argtypes = [c_void_p, c_float, c_float]
        lib.motor_handle_send_pos_vel.restype = c_int32
        lib.motor_handle_send_vel.argtypes = [c_void_p, c_float]
        lib.motor_handle_send_vel.restype = c_int32
        lib.motor_handle_send_force_pos.argtypes = [c_void_p, c_float, c_float, c_float]
        lib.motor_handle_send_force_pos.restype = c_int32

        lib.motor_handle_store_parameters.argtypes = [c_void_p]
        lib.motor_handle_store_parameters.restype = c_int32
        lib.motor_handle_request_feedback.argtypes = [c_void_p]
        lib.motor_handle_request_feedback.restype = c_int32
        lib.motor_handle_request_fresh_state.argtypes = [c_void_p, c_uint32, POINTER(CState)]
        lib.motor_handle_request_fresh_state.restype = c_int32
        lib.motor_handle_set_can_timeout_ms.argtypes = [c_void_p, c_uint32]
        lib.motor_handle_set_can_timeout_ms.restype = c_int32

        lib.motor_handle_write_register_f32.argtypes = [c_void_p, c_uint8, c_float]
        lib.motor_handle_write_register_f32.restype = c_int32
        lib.motor_handle_write_register_u32.argtypes = [c_void_p, c_uint8, c_uint32]
        lib.motor_handle_write_register_u32.restype = c_int32
        lib.motor_handle_get_register_f32.argtypes = [c_void_p, c_uint8, c_uint32, POINTER(c_float)]
        lib.motor_handle_get_register_f32.restype = c_int32
        lib.motor_handle_get_register_u32.argtypes = [c_void_p, c_uint8, c_uint32, POINTER(c_uint32)]
        lib.motor_handle_get_register_u32.restype = c_int32

        lib.motor_handle_get_state.argtypes = [c_void_p, POINTER(CState)]
        lib.motor_handle_get_state.restype = c_int32
        lib.motor_handle_get_feedback_stats.argtypes = [c_void_p, POINTER(CFeedbackStats)]
        lib.motor_handle_get_feedback_stats.restype = c_int32

        lib.motor_handle_damiao_get_param_f32.argtypes = [c_void_p, c_uint16, c_uint32, POINTER(c_float)]
        lib.motor_handle_damiao_get_param_f32.restype = c_int32
        lib.motor_handle_damiao_get_param_u32.argtypes = [c_void_p, c_uint16, c_uint32, POINTER(c_uint32)]
        lib.motor_handle_damiao_get_param_u32.restype = c_int32
        lib.motor_handle_damiao_write_param_f32.argtypes = [c_void_p, c_uint16, c_float]
        lib.motor_handle_damiao_write_param_f32.restype = c_int32
        lib.motor_handle_damiao_write_param_u32.argtypes = [c_void_p, c_uint16, c_uint32]
        lib.motor_handle_damiao_write_param_u32.restype = c_int32


_abi_singleton: Abi | None = None


def get_abi() -> Abi:
    global _abi_singleton
    if _abi_singleton is None:
        _abi_singleton = Abi()
    return _abi_singleton


def abi_version() -> str:
    msg = get_abi().lib.motor_abi_version()
    return msg.decode() if msg else ""


def abi_capabilities() -> dict:
    msg = get_abi().lib.motor_abi_capabilities_json()
    return json.loads(msg.decode() if msg else "{}")


def damiao_register_info(rid: int) -> tuple[str, str] | None:
    """Return (access, data_type) from the native canonical register table."""
    value = int(rid)
    if value < 0 or value > 0xFF:
        return None
    info = CRegisterInfo()
    rc = get_abi().lib.motor_damiao_register_info(value, ctypes.byref(info))
    if rc != 0:
        msg = get_abi().lib.motor_last_error_message()
        raise CallError(msg.decode() if msg else "motor_damiao_register_info failed")
    if not info.has_value:
        return None
    access = {0: "RO", 1: "RW"}.get(int(info.access))
    data_type = {0: "f32", 1: "u32"}.get(int(info.data_type))
    if access is None or data_type is None:
        raise CallError("motor_damiao_register_info returned invalid metadata")
    return access, data_type
